--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
 title: tldraw
-description: A tiny little drawing app
-theme: jekyll-theme-minimal
+description: Collaborative whiteboard for drawing and diagramming.
+theme: jekyll-theme-cayman
